--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,33 +36,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "#todo: incorporate different collection types rather than a catch all publications, requires other changes to template\n",
     "publist = {\n",
     "    \"proceeding\": {\n",
-    "        \"file\" : \"proceedings.bib\",\n",
+    "        \"file\" : \"output.bib\",\n",
     "        \"venuekey\": \"booktitle\",\n",
     "        \"venue-pretext\": \"In the proceedings of \",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
-    "                        \"permalink\":\"/publication/\"}\n",
+    "                        \"permalink\":\"/publication/\",\n",
+    "                        \"category\": \"conferences\"}\n",
     "        \n",
     "    },\n",
     "    \"journal\":{\n",
-    "        \"file\": \"pubs.bib\",\n",
+    "        \"file\": \"journal.bib\",\n",
     "        \"venuekey\" : \"journal\",\n",
     "        \"venue-pretext\" : \"\",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
-    "                        \"permalink\":\"/publication/\"}\n",
-    "    } \n",
+    "                        \"permalink\":\"/publication/\",\n",
+    "                        \"category\": \"manuscripts\"}\n",
+    "    }, \n",
+    "    \"arxiv\":{\n",
+    "        \"file\": \"arxiv.bib\",\n",
+    "        \"venuekey\" : \"journal\",\n",
+    "        \"venue-pretext\" : \"\",\n",
+    "        \"collection\" : {\"name\":\"publications\",\n",
+    "                        \"permalink\":\"/publication/\",\n",
+    "                        \"category\": \"arxiv\"}\n",
+    "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,11 +89,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCESSFULLY PARSED huang2018multi: \" Multi-view fusion with deep learning for 3D shape classifica ... \"\n",
+      "SUCESSFULLY PARSED luo2019word: \" Word-to-word Machine Translation: Bilateral Similarity Retri ... \"\n",
+      "SUCESSFULLY PARSED he2018visual: \" Visual-based character embedding via principal component ana ... \"\n",
+      "SUCESSFULLY PARSED tan2020urban: \" Urban road water recognition based on deep learning  \"\n",
+      "SUCESSFULLY PARSED luo2020breeding: \" Breeding Pig’s Butt Detection Based on SSD  \"\n",
+      "SUCESSFULLY PARSED lu2020vehicle: \" Vehicle Safety Reminder System Based on Single Chip Microcom ... \"\n",
+      "SUCESSFULLY PARSED luo2020development: \" Development of Raspberry Pi Based Experimental Device for Hi ... \"\n",
+      "SUCESSFULLY PARSED he2020spatio: \" Spatio-Temporal Action Localization for Pedestrian Action De ... \"\n",
+      "SUCESSFULLY PARSED wu2024diffusion: \" Diffusion Posterior Proximal Sampling for Image Restoration  \"\n",
+      "SUCESSFULLY PARSED zhang2020learning: \" Learning motion representation for real-time spatio-temporal ... \"\n",
+      "SUCESSFULLY PARSED zhang2020weight: \" Weight asynchronous update: Improving the diversity of filte ... \"\n",
+      "SUCESSFULLY PARSED he2023fam: \" FAM-Former: Global Transformer and Feature Aggregation Modul ... \"\n",
+      "SUCESSFULLY PARSED du2024structure: \" Structure-aware diffusion for low-dose CT imaging  \"\n",
+      "SUCESSFULLY PARSED tan2024prx: \" PRX-Change: Enhancing remote sensing change detection throug ... \"\n",
+      "SUCESSFULLY PARSED luo2024bi: \" Bi-Constraints Diffusion: A Conditional Diffusion Model with ... \"\n",
+      "SUCESSFULLY PARSED he2024solving: \" Solving Zero-Shot Sparse-View CT Reconstruction With Variati ... \"\n",
+      "SUCESSFULLY PARSED he2021pointshufflenet: \" PointShuffleNet: Learning Non-Euclidean Features with Homoto ... \"\n",
+      "SUCESSFULLY PARSED he2023iterative: \" Iterative reconstruction based on latent diffusion model for ... \"\n",
+      "SUCESSFULLY PARSED zhou2024medsam: \" MedSAM-U: Uncertainty-Guided Auto Multi-Prompt Adaptation fo ... \"\n"
+     ]
+    }
+   ],
    "source": [
     "for pubsource in publist:\n",
     "    parser = bibtex.Parser()\n",
@@ -149,6 +185,8 @@
     "            md += \"\"\"collection: \"\"\" +  publist[pubsource][\"collection\"][\"name\"]\n",
     "\n",
     "            md += \"\"\"\\npermalink: \"\"\" + publist[pubsource][\"collection\"][\"permalink\"]  + html_filename\n",
+    "\n",
+    "            md += \"\"\"\\ncategory: \"\"\" + publist[pubsource][\"collection\"][\"category\"]\n",
     "            \n",
     "            note = False\n",
     "            if \"note\" in b.keys():\n",
@@ -166,7 +204,7 @@
     "                    md += \"\\npaperurl: '\" + b[\"url\"] + \"'\"\n",
     "                    url = True\n",
     "\n",
-    "            md += \"\\ncitation: '\" + html_escape(citation) + \"'\"\n",
+    "            # md += \"\\ncitation: '\" + html_escape(citation) + \"'\"\n",
     "\n",
     "            md += \"\\n---\"\n",
     "\n",
@@ -197,11 +235,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -215,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
